--- a/codigo/Loginpage/loginPage.html
+++ b/codigo/Loginpage/loginPage.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div class="nav">
+        <img src="../Landingpage/img/25694.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+        
+    </div>
+    .login
 </body>
 </html>
