--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -9,11 +9,31 @@
 </head>
 <body>
     <div class="nav">
-        <img src="./img/25694.png" alt="Home" id="imgnav">
+        <img src="./img/25694.png" alt="Home" id="imgnav" onclick="location.href=''">
         <button id="btnnav" onclick="location.href='../LoginPage/loginPage.html'">Entrar</button>
     </div>
-    <img src="./img/Dicipullusgif.gif" alt="Banner" id="imgbanner">
+    <div class="banner">
+        <h1 id="banner">DICIPULLUS</h1>
+    </div>
     <div class="article">
+        <h1>
+            QUEM NÓS SOMOS?
+        </h1>
+        <p>
+            A busca por estágios é uma etapa de exímia importância para quem quer ingressar no mercado de trabalho. No
+            estágio o estudante tem a oportunidade de aplicar seus conhecimentos acadêmicos enquanto cria uma noção mais
+            aprofundada sobre a prática do trabalho na sua área de atuação. Apesar disso, a busca por estágios pode ser
+            um verdadeiro desafio, tanto por parte do estagiário quanto por parte da empresa.
+        </p>
+        <p>
+            Estágios são a base para o desenvolvimento profissional. As empresas procuram estagiários para ensiná-los e
+            dar oportunidades. Porém, nem sempre essa parceria acontece. Neste trabalho, o grupo irá desenvolver uma forma
+            de ajudar na busca do estagiário e como ele pode ajudar a empresa se tornando um profissional mais qualificado.
+        </p>
+        <p>
+            Dentre as preocupações para a montagem da interface do sistema, estamos estabelecendo foco em questões como
+            agilidade, acessibilidade e usabilidade.
+        </p>
         <h1>
             O QUE NÓS FAZEMOS?
         </h1>
