uniao dos fluxos

--- a/codigo/utils/nav.html
+++ b/codigo/utils/nav.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -8,13 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="nav">
         <img src="../images/unknown.png" alt="Home" id="imgnav">
         <button id="btnnav" onclick="location.href='../LoginPage/loginPage.html'">Entrar</button>
     </div>
-   <main>
-    <iframe  src="../C-Estagiario/C-EstagiarioIV/index.html" frameborder="0"></iframe>
-   </main>
+    <main>
+        <iframe id="iframe" src="" frameborder="0"></iframe>
+        <button onclick="goOn(false)" class="avancar">Avançar</button>
+    </main>
+    <script src="./js.js"></script>
 </body>
+
 </html>
