--- a/codigo/C-Estagiario/index.html
+++ b/codigo/C-Estagiario/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Page</title>
 </head>
 
 <body>
@@ -22,13 +22,10 @@
             </div>
 
             <form class="formulario">
-                <input type="text" placeholder="Nome">
 
                 <input type="text" placeholder="Email">
 
                 <input type="password" placeholder="Senha">
-
-                <input type="password" placeholder="Confirmar senha">
                 
                 <div class="position">
                     <button  class="send">Avançar <i class="bi bi-arrow-right"></i></button>
