--- a/codigo/C-Estagiario/index.html
+++ b/codigo/C-Estagiario/index.html
@@ -22,10 +22,13 @@
             </div>
 
             <form class="formulario">
+                <input type="text" placeholder="Nome">
 
                 <input type="text" placeholder="Email">
 
                 <input type="password" placeholder="Senha">
+
+                <input type="password" placeholder="Confirmar senha">
                 
                 <div class="position">
                     <button  class="send">Avançar <i class="bi bi-arrow-right"></i></button>
