finalizalção layout e navegação

--- a/codigo/utils/nav.html
+++ b/codigo/utils/nav.html
@@ -16,8 +16,14 @@
         <button id="btnnav" onclick="location.href='../LoginPage/loginPage.html'">Entrar</button>
     </div>
     <main>
-        <iframe id="iframe" src="" frameborder="0"></iframe>
-        <button onclick="goOn(false)" class="avancar">Avançar</button>
+
+        <div class="coisa">
+            <iframe id="iframe" src="" frameborder="0"></iframe>
+            <button onclick="goOn(false)" class="avancar">Avançar</button>
+
+        </div>
+
+
     </main>
     <script src="./js.js"></script>
 </body>
