finalização do fluxo com os salvamentos em localstorage

--- a/codigo/C-Estagiario/C-EstagiarioII/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioII/index.html
@@ -27,9 +27,9 @@
                     <button class="btn" onclick="exibir()"> <i id="addIcon" class="bi bi-plus-lg"></i></button>
                 </div>
 
-                <form class="formularioI" id="formularioI">
-                    <input type="text" placeholder="Instituição de ensiono">
-                    <input type="text" placeholder="Tipo de formação">
+                <form class="formularioI" id="formII">
+                    <input type="text" placeholder="Instituição de ensiono" id="instEnsino">
+                    <input type="text" placeholder="Tipo de formação" id="tipoFormacao">
                     <div class="ck-box">
                         <input type="checkbox" name="andamento" id="andamento">
                         <label>Em andamento</label>
