--- a/codigo/C-Estagiario/C-EstagiarioIII/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioIII/index.html
@@ -28,17 +28,14 @@
                     <button class="btn" onclick="exibir()"> <i id="addIcon" class="bi bi-plus-lg"></i></button>
                 </div>
 
-                <form class="formularioI" id="formularioI">
+                <form class="formularioI" id="formIII">
                     <div class="ck-box">
                         <input type="checkbox" name="andamento" id="andamento">
                         <label>Sem Experiencia </label>
                     </div>
-                    <input type="text" placeholder="Empresa / altonomo">
-                    <input type="text" placeholder="Função / cargo ">
-                    <input type="text" placeholder="Descreva brevemente suas atividades neste emprego " >
-
-                    
-
+                    <input type="text" placeholder="Empresa / autonomo" id="empOrAuto">
+                    <input type="text" placeholder="Função / cargo" id="cargo">
+                    <input type="text" placeholder="Descreva brevemente suas atividades neste emprego " id="breveDesc">
                 </form>
             </div>
         </div>
