--- a/codigo/C-Estagiario/C-EstagiarioIV/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioIV/index.html
@@ -27,13 +27,13 @@
                     <button class="btn" onclick="exibir()"> <i id="addIcon" class="bi bi-plus-lg"></i></button>
                 </div>
 
-                <form class="formularioI" id="formularioI">
+                <form class="formularioI" id="formIV">
                     <input type="text" placeholder="Competencia">
                     
                     <div class="ck-box">
-                        <input type="checkbox" name="andamento" id="andamento">
+                        <input type="checkbox" name="andamento" id="tecnicaCH">
                         <label id="tecnica">Tecnica</label>
-                        <input type="checkbox" name="andamento" id="andamento">
+                        <input type="checkbox" name="andamento" id="cognitivaCH">
                         <label>Cognitiva</label>
                     </div>
                
