--- a/codigo/C-Estagiario/index.html
+++ b/codigo/C-Estagiario/index.html
@@ -21,14 +21,14 @@
                 </div>
             </div>
 
-            <form class="formulario">
-                <input type="text" placeholder="Nome">
+            <form class="formulario" id="formI">
+                <input type="text" id="name" placeholder="Nome">
 
-                <input type="text" placeholder="Email">
+                <input type="text" id="email" placeholder="Email">
 
-                <input type="password" placeholder="Senha">
+                <input type="password" id="pass" placeholder="Senha">
 
-                <input type="password" placeholder="Confirmar senha">
+                <input type="password" id="confirmPass" placeholder="Confirmar senha">
                 
                
             </form>
