--- a/codigo/utils/nav.html
+++ b/codigo/utils/nav.html
@@ -12,19 +12,20 @@
 
 <body>
     <div class="nav">
-        <img src="../images/unknown.png" alt="Home" id="imgnav">
-        <button id="btnnav" onclick="location.href='../LoginPage/loginPage.html'">Entrar</button>
+        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
     </div>
     <main>
 
         <div class="coisa">
-            <iframe id="iframe" src="" frameborder="0"></iframe>
-            <button onclick="goOn(false)" class="avancar">Avançar</button>
+            <iframe id="MyIframe" src="" frameborder="0"></iframe>
+            <button onclick="goOn(false,true)"  class="avancar">Avançar</button>
+            
 
         </div>
 
 
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="./js.js"></script>
 </body>
 
