--- a/codigo/craicaVagas/index.html
+++ b/codigo/craicaVagas/index.html
@@ -2,43 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Document</title>
 </head>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <body>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Criar nova vaga
   </button>
-  
+
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          
+          <h5 class="modal-title" id="exampleModalLabel">Nova Vaga</h5>
+
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-            <input type="text" name="" id="">
-            <label for=""></label>
-            <input type="checkbox" name="" id="">
-            <input type="checkbox" name="" id="">
-            <input type="checkbox" name="" id="">
-            <input type="text" name="" id="">
-            <input type="text" name="" id="">
-            
+        <div class="Novavaga">
+          <h6 class="nova-vaga" id="nomevaga"><b>Nome:</b></h6>
+          <input type="text" name="" id=""><p>
+          <h7 class="turno" id="Turno"><b>Turno (pode escolher mais de um):</b></h7><p>
+          <h8 class="manha" id="manha"><i>Manhã</i></h8>
+          <input type="checkbox" name="" id=""><p></p>
+          <h9 class="tarde" id="tarde"><i>Tarde</i></h9>
+          <input type="checkbox" name="" id=""><p></p>
+          <h10 class="noite" id="noite"><i>Noite</i></h10>
+          <input type="checkbox" name="" id=""><p></p>
+          <h11 class="nova-vaga" id="areaatuacao"><b>Área de atuação do estagiário:</b></h11><p></p>
+          <input type="text" name="" id=""><p></p>
+          <h12 class="nova-vaga" id="horasdiarias"><b>Horas diárias:</b></h12><p></p>
+          <input type="text" name="" id="">
+
+
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
