--- a/codigo/craicaVagas/index.html
+++ b/codigo/craicaVagas/index.html
@@ -30,19 +30,22 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="Novavaga">
-          <h6 class="nova-vaga" id="nomevaga"><b>Nome:</b></h6>
-          <input type="text" name="" id=""><p>
-          <h7 class="turno" id="Turno"><b>Turno (pode escolher mais de um):</b></h7><p>
-          <h8 class="manha" id="manha"><i>Manhã</i></h8>
-          <input type="checkbox" name="" id=""><p></p>
-          <h9 class="tarde" id="tarde"><i>Tarde</i></h9>
-          <input type="checkbox" name="" id=""><p></p>
-          <h10 class="noite" id="noite"><i>Noite</i></h10>
-          <input type="checkbox" name="" id=""><p></p>
-          <h11 class="nova-vaga" id="areaatuacao"><b>Área de atuação do estagiário:</b></h11><p></p>
-          <input type="text" name="" id=""><p></p>
-          <h12 class="nova-vaga" id="horasdiarias"><b>Horas diárias:</b></h12><p></p>
-          <input type="text" name="" id="">
+
+          <input type="text" name="" id="" class="txt" placeholder="Nome:">
+          <div class="boxCheckbox">
+            <h7 class="turno" id="Turno">Turno (pode escolher mais de um):</h7>
+            <div class="checkbox">
+              <h8 class="manha" id="manha">Manhã</h8>
+              <input type="checkbox" name="" id="">
+              <h8 class="tarde" id="tarde">Tarde</h8>
+              <input type="checkbox" name="" id="">
+              <h8 class="noite" id="noite">Noite</h8>
+              <input type="checkbox" name="" id="">
+            </div>
+          </div>
+
+          <input type="text" name="" id="" class="txt" placeholder="Área de atuação:">
+          <input type="text" name="" id="" class="txt" placeholder="Horas diárias:">
 
 
 
