Commit to merge

--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <img src="./img/25694.png" alt="Home" id="imgnav" onclick="location.href=''">
-        <button id="btnnav" onclick="location.href='../LoginPage/loginPage.html'">Entrar</button>
+        <button id="btnnav" onclick="getButton('E')">Entrar</button>
     </div>
     <div class="banner">
         <h1 id="banner">DICIPULLUS</h1>
@@ -53,6 +53,6 @@
             agilidade, acessibilidade e usabilidade.
         </p>
     </div>
-    <button id="btnComeceAgora" onclick="location.href='../LoginPage/loginPage.html'">Comece Agora</button>
+    <button id="btnComeceAgora" onclick="getButton('C')">Comece Agora</button>
 </body>
 </html>
