evolução do fluxo de navergação

--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <img src="./img/25694.png" alt="Home" id="imgnav" onclick="location.href=''">
-        <button id="btnnav" onclick="getButton('E')">Entrar</button>
+        <a href="../utils/nav.html">  <button id="btnComeceAgora" onclick="getButton('Entrar')" >Entrar</button></a>
     </div>
     <div class="banner">
         <h1 id="banner">DICIPULLUS</h1>
@@ -53,6 +53,8 @@
             agilidade, acessibilidade e usabilidade.
         </p>
     </div>
-    <button id="btnComeceAgora" onclick="getButton('C')">Comece Agora</button>
+    <a href="../utils/nav.html">  <button id="btnComeceAgora" onclick="getButton('Cadastro')" >Agora</button></a>
+  
+    <script src="./js.js"></script>
 </body>
 </html>
