--- a/codigo/cardSelectpage/index.html
+++ b/codigo/cardSelectpage/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 
 <head>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head> 
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 
 <body>
-      <main>
-        <div class="card" id="e">
-      
-        <div class="cetor">
-          <h2 id="estagio">Sou <br>
-             Estagiario</h2 id="estagio">
-        </div>
-        </div>
-        <div class="card" id="empresa">
-        
+  <main>
+
+    <div class="nav">
+      <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    </div>
+
+    <div class="container">
+      <a href="../utils/nav.html">
+        <div class="card" id="e" onclick="typeCadastro('Estagiario')">
+
           <div class="cetor">
-            <h2 id="estagio" >Sou <br> empresa</h2>
+            <h2 id="estagio">Sou <br>
+              Estagiario</h2 id="estagio">
           </div>
         </div>
-      </main>
+      </a>
+      <a href="../utils/nav.html">
+        <div class="card" id="empresa" onclick="typeCadastro('Empresa')">
+
+          <div class="cetor">
+            <h2 id="estagio">Sou <br> empresa</h2>
+          </div>
+        </div>
+
+    </div>
+    </a>
+
+
+  </main>
+  <script src="./js.js"></script>
 </body>
 
 </html>
