--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -53,7 +53,7 @@
             agilidade, acessibilidade e usabilidade.
         </p>
     </div>
-    <a href="../utils/nav.html">  <button id="btnComeceAgora" onclick="getButton('Cadastro')" >Agora</button></a>
+    <a href="../cardSelectpage/index.html">  <button id="btnComeceAgora" onclick="getButton('Cadastro')" >Agora</button></a>
   
     <script src="./js.js"></script>
 </body>
