--- a/codigo/Cadastro/cardSelectpage/index.html
+++ b/codigo/Cadastro/cardSelectpage/index.html
@@ -11,6 +11,9 @@
 </head> 
 
 <body>
+  <div class="nav">
+    <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../../Landingpage/index.html'">
+</div>
       <main>
         <div class="card" id="e">
       
@@ -22,7 +25,7 @@
         <div class="card" id="empresa">
         
           <div class="cetor">
-            <h2 id="estagio" >Sou <br> empresa</h2>
+            <h2 id="estagio" >Sou <br> Empresa</h2>
           </div>
         </div>
       </main>
