commit geral para s2

--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <img src="./img/25694.png" alt="Home" id="imgnav" onclick="location.href=''">
-        <a href="../utils/nav.html">  <button id="btnComeceAgora" onclick="getButton('Entrar')" >Entrar</button></a>
+        <a href="../cardSelectpage/index.html">  <button id="btnComeceAgora" onclick="getButton('Entrar')" >Entrar</button></a>
     </div>
     <div class="banner">
         <h1 id="banner">DICIPULLUS</h1>
