--- a/codigo/utils/nav.html
+++ b/codigo/utils/nav.html
@@ -18,7 +18,7 @@
 
         <div class="coisa">
             <iframe id="MyIframe" src="" frameborder="0"></iframe>
-            <button onclick="goOn(false,true)"  class="avancar">Avançar</button>
+            <button id="avancar" onclick="goOn(false,true)"  class="avancar">Avançar</button>
             
 
         </div>
