--- a/codigo/vagas_estagiario/index.html
+++ b/codigo/vagas_estagiario/index.html
@@ -6,14 +6,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Estagiarios</title>
+  <title>VagasTIAW</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 
 <body>
+  <div class="nav">
+    <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+</div>
   <div class="vagarecomendada">
-    <h2 >ESTAGIÁRIOS<br>RECOMENDADOS</h2>
+    <h2 >VAGAS<br>RECOMENDADAS</h2>
   </div>
 
 <div class="container bg-gradient p-5">
@@ -36,8 +39,8 @@
           </div>
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -66,8 +69,8 @@
 
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -98,8 +101,8 @@
 
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -114,7 +117,7 @@
 
 
   <div class="vagarecomendada">
-    <h1>ESTAGIÁRIOS<br>DISPONÍVEIS</h1>
+    <h1>VAGAS<br>DISPONÍVEIS</h1>
   </div>
   <div class="container bg-gradient p-5">
     <div class="row m-auto text-center">
@@ -136,8 +139,8 @@
           </div>
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -166,8 +169,8 @@
 
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -198,8 +201,8 @@
 
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li><b>Bolsa:</b> informacoes</li>
+              <li><b>Nome:</b> informacoes</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
@@ -214,6 +217,7 @@
         
       </div>
     </div>
+    <script src="./js.js"></script>
 </body>
 
 </html>
