--- a/codigo/LoginPage/indexEstagiario.html
+++ b/codigo/LoginPage/indexEstagiario.html
@@ -17,7 +17,7 @@
         <div class="card" id="e">
 
             <div class="cetor">
-                <h2 id="estagio">Sou <br> Estagiario</h2 id="estagio">
+                <h2 id="estagio">Sou <br> Estagiário</h2 id="estagio">
             </div>
         </div>
             <div class="forms">
