--- a/codigo/cardSelectpage/index.html
+++ b/codigo/cardSelectpage/index.html
@@ -22,13 +22,13 @@
 
           <div class="cetor">
             <h2 id="estagio">Sou <br>
-              Estagiario</h2 id="estagio">
+              Estagiário</h2 id="estagio">
           </div>
         </div>
         <div class="card" id="empresa" onclick="typeCadastro('Empresa')">
 
           <div class="cetor">
-            <h2 id="estagio">Sou <br> empresa</h2>
+            <h2 id="estagio">Sou <br> Empresa</h2>
           </div>
         </div>
 
