--- a/codigo/listar_empresas/index.html
+++ b/codigo/listar_empresas/index.html
@@ -15,6 +15,7 @@
   <div class="nav">
     <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
 </div>
+  <button onclick="coisa()">cutextomaior</button>
   <div class="vagarecomendada">
     <h2 >ESTAGIÁRIOS<br>RECOMENDADOS</h2>
   </div>
