--- a/codigo/listar_empresas/index.html
+++ b/codigo/listar_empresas/index.html
@@ -15,7 +15,8 @@
   <div class="nav">
     <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
 </div>
-  <button onclick="coisa()">cutextomaior</button>
+  <button onclick="coisa()">textomaior</button>
+  <div id="container"></div>
   <div class="vagarecomendada">
     <h2 >ESTAGIÁRIOS<br>RECOMENDADOS</h2>
   </div>
@@ -40,8 +41,8 @@
           </div>
           <div class="card-body bg-white mt-0 shadow">
             <ul class="list-unstyled mb-5 position-relative">
-              <li><b>Formação:</b> informacoes</li>
-              <li><b>Pretenção Salarial:</b> informacoes</li>
+              <li id="formacao"><b>Formação:</b> informacões</li>
+              <li><b>Pretenção Salarial:</b> informacões</li>
               <li><b>Turno:</b> informacoes</li>
               <li><b>Horas por Dia:</b> informacoes</li>
             </ul>
