commit ajustes em grupo

--- a/codigo/C-Estagiario/C-EstagiarioII/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioII/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <main>
+        <div class="nav">
+            <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+        </div>
         <div class="forms">
             <div class="card" id="e">
 
