--- a/codigo/C-Estagiario/C-EstagiarioIII/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioIII/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <main>
-        <div class="nav">
-            <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    <div class="nav">
+            <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
         </div>
+    <main>
+        
         <div class="forms">
             <div class="card" id="e">
 
@@ -39,6 +40,7 @@
                     <input type="text" placeholder="Empresa / autonomo" id="empOrAuto">
                     <input type="text" placeholder="Função / cargo" id="cargo">
                     <input type="text" placeholder="Descreva brevemente suas atividades neste emprego " id="breveDesc">
+                    <button class="avancar" onclick="getFormsIIIValue(event)">Avançar</button>
                 </form>
             </div>
         </div>
