--- a/codigo/C-Estagiario/C-EstagiarioII/index.html
+++ b/codigo/C-Estagiario/C-EstagiarioII/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="nav">
-        <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+        <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../../Landingpage/index.html'">
     </div>
     <main>
         <div class="forms">
