--- a/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
+++ b/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="nav">
+        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    </div>
     <main>
         <div class="forms">
             <div class="card" id="e">
