--- a/codigo/Cadastro/C-Empresa/index.html
+++ b/codigo/Cadastro/C-Empresa/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="nav">
+        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    </div>
     <main>
         <div class="forms">
             <div class="card" id="e">
@@ -43,12 +46,14 @@
                     <label for="chkPublic">Órgão/Empresa Pública</label>
                     </div>
                 </div>
+                <button class="avancar" onclick="avancar(event)">Avançar</button>
 
             </form>
         </div>
 
 
     </main>
+    <script src="./js.js"></script>
 </body>
 
 </html>
