--- a/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
+++ b/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="nav">
-        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+        <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../../../Landingpage/index.html'">
     </div>
     <main>
         <div class="forms">
@@ -36,12 +36,13 @@
 
                 <input type="password" id="confirmPass" placeholder="Confirmar senha">
                 
-               
+                <button class="avancar" onclick="avancar(event)">Avançar</button>
             </form>
         </div>
 
 
     </main>
+    <script src="./js.js"></script>
 </body>
 
 </html>
