commit for validators login

--- a/codigo/LoginPage/indexEmpresa.html
+++ b/codigo/LoginPage/indexEmpresa.html
@@ -12,27 +12,21 @@
 </head>
 
 <body>
-  
+    <div class="nav">
+        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    </div>
     <main>
         <div class="card" id="e">
-
             <div class="cetor">
                 <h2 id="estagio">Sou <br> Estagiario</h2 id="estagio">
             </div>
         </div>
             <div class="forms">
-                
                 <form class="formulario" id="formI">
-
                     <input type="text" id="email" placeholder="Email ou CNPJ">
-
                     <input type="password" id="pass" placeholder="Senha">
-
-
                 </form>
-              
-                <button id="btn" class="btn btn-secondary avancarbtn" onclick="avancar('emp')" style=>Avançar</button>
-
+                <button id="btn" class="avancar" onclick="avancar('emp')" style=>Avançar</button>
             </div>
     </main>
     <script src="./js.js"></script>
