--- a/codigo/LoginPage/indexEstagiario.html
+++ b/codigo/LoginPage/indexEstagiario.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-  
+    <div class="nav">
+        <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+    </div>
     <main>
         <div class="card" id="e">
 
@@ -31,7 +33,7 @@
 
                 </form>
               
-                <button id="btn" class="btn btn-secondary avancarbtn" onclick="avancar('es')" style=>Avançar</button>
+                <button id="btn" class="avancar" onclick="avancar('es')" style=>Avançar</button>
 
             </div>
     </main>
