--- a/codigo/listar_empresas/Detalhes/index.html
+++ b/codigo/listar_empresas/Detalhes/index.html
@@ -1,76 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estagiários Aplicados</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>  
-    <div class="container">
-        <div class="row">
-            <div class="well">
-            <h1 class="text-center">ESTAGIARIOS APLICADOS</h1>
-            <div class="list-group">
-              <a href="#" class="list-group-item" id="content">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive"  src="Carinha.png" alt="" >
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> NOME </h4>
-                        <li class="list-group-item-text">Formação: </li>
-                        <li class="list-group-item-text">Pretenção Salarial: </li>
-                        <li class="list-group-item-text">Turno: </li>
-                        <li class="list-group-item-text">Horas Diárias: </li>
-                       
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <button type="button" class="btn btn-primary btn-lg btn-block"> CONTATO </button>
-                    </div>
-              </a>
-              <a href="#" class="list-group-item">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive" src="Carinha.png" alt="" >
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> NOME </h4>
-                        <li class="list-group-item-text">Formação: </li>
-                        <li class="list-group-item-text">Pretenção Salarial: </li>
-                        <li class="list-group-item-text">Turno: </li>
-                        <li class="list-group-item-text">Horas Diárias: </li>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <button type="button" class="btn btn-primary btn-lg btn-block"> CONTATO </button>
-                    </div>
-              </a>
-              <a href="#" class="list-group-item">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive" src="Carinha.png">
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> NOME </h4>
-                        <li class="list-group-item-text">Formação: </li>
-                        <li class="list-group-item-text">Pretenção Salarial: </li>
-                        <li class="list-group-item-text">Turno: </li>
-                        <li class="list-group-item-text">Horas Diárias: </li>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <button type="button" class="btn btn-primary btn-lg btn-block"> CONTATO </button>
-                    </div>
-              </a>
+
+<body>
+    <div class="nav">
+        <img src="../../images/unknown.png" alt="Home" id="imgnav"
+            onclick="location.href='../../Landingpage/index.html'">
+    </div>
+    <div class="listagem">
+        <h1>Estagiarios Aplicados</h1>
+        <div class="item">
+            <img src="../../images/Carinha.png" alt="img" class="userImg">
+            <div class="caracteristicas">
+                <div class="caracteristica">
+                    <label id="namelbl">Nome: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="formacaolbl">Formação: </label>
+                    <label for="formacaoValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="salariolbl">Pretenção Salárial: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="turnolbl">Turno: </label>
+                    <label for="turnoValue">xxxxxxxxxx</label>
+                </div>
+                <button class="btnDetalhes">Detalhes</button>
             </div>
+        </div>
+        <div class="item">
+            <img src="../../images/Carinha.png" alt="img" class="userImg">
+            <div class="caracteristicas">
+                <div class="caracteristica">
+                    <label id="namelbl">Nome: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="formacaolbl">Formação: </label>
+                    <label for="formacaoValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="salariolbl">Pretenção Salárial: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="turnolbl">Turno: </label>
+                    <label for="turnoValue">xxxxxxxxxx</label>
+                </div>
+                <button class="btnDetalhes">Detalhes</button>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../../images/Carinha.png" alt="img" class="userImg">
+            <div class="caracteristicas">
+                <div class="caracteristica">
+                    <label id="namelbl">Nome: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="formacaolbl">Formação: </label>
+                    <label for="formacaoValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="salariolbl">Pretenção Salárial: </label>
+                    <label for="nameValue">xxxxxxxxxx</label>
+                </div>
+                <div class="caracteristica">
+                    <label id="turnolbl">Turno: </label>
+                    <label for="turnoValue">xxxxxxxxxx</label>
+                </div>
+                <button class="btnDetalhes">Detalhes</button>
             </div>
         </div>
     </div>
 </body>
+
 </html>
