Texto LandingPage alterado

--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="index.css">
     <title>Home</title>
 </head>
+
 <body>
     <div class="nav">
         <img src="./img/25694.png" alt="Home" id="imgnav" onclick="location.href=''">
-        <a href="../cardSelectpage/index.html">  <button id="btnComeceAgora" onclick="getButton('Entrar')" >Entrar</button></a>
+        <a href="../cardSelectpage/index.html"> <button id="btnComeceAgora"
+                onclick="getButton('Entrar')">Entrar</button></a>
     </div>
     <div class="banner">
         <h1 id="banner">DICIPULLUS</h1>
@@ -20,19 +23,16 @@
             QUEM NÓS SOMOS?
         </h1>
         <p>
-            A busca por estágios é uma etapa de exímia importância para quem quer ingressar no mercado de trabalho. No
-            estágio o estudante tem a oportunidade de aplicar seus conhecimentos acadêmicos enquanto cria uma noção mais
-            aprofundada sobre a prática do trabalho na sua área de atuação. Apesar disso, a busca por estágios pode ser
-            um verdadeiro desafio, tanto por parte do estagiário quanto por parte da empresa.
+            Somos um grupo de alunos do curso de Ciência da Computação da PUC Minas. Desenvolvemos esse projeto
+            visando facilitar a vida dos estagiários e das empresas contratantes.
         </p>
         <p>
-            Estágios são a base para o desenvolvimento profissional. As empresas procuram estagiários para ensiná-los e
-            dar oportunidades. Porém, nem sempre essa parceria acontece. Neste trabalho, o grupo irá desenvolver uma forma
-            de ajudar na busca do estagiário e como ele pode ajudar a empresa se tornando um profissional mais qualificado.
+            Através de pesquisas a concluímos que grande parte dos alunos possuem diversas dificuldades
+            na hora de encontrar estágio. Em suma, desenvolvemos a ideia de um site que mitiga essas dificuldades.
+            Assim criamos a DICIPULLUS.
         </p>
         <p>
-            Dentre as preocupações para a montagem da interface do sistema, estamos estabelecendo foco em questões como
-            agilidade, acessibilidade e usabilidade.
+
         </p>
         <h1>
             O QUE NÓS FAZEMOS?
@@ -45,16 +45,20 @@
         </p>
         <p>
             Estágios são a base para o desenvolvimento profissional. As empresas procuram estagiários para ensiná-los e
-            dar oportunidades. Porém, nem sempre essa parceria acontece. Neste trabalho, o grupo irá desenvolver uma forma
-            de ajudar na busca do estagiário e como ele pode ajudar a empresa se tornando um profissional mais qualificado.
+            dar oportunidades. Porém, nem sempre essa parceria acontece. Neste trabalho, o grupo irá desenvolver uma
+            forma
+            de ajudar na busca do estagiário e como ele pode ajudar a empresa se tornando um profissional mais
+            qualificado.
         </p>
         <p>
             Dentre as preocupações para a montagem da interface do sistema, estamos estabelecendo foco em questões como
             agilidade, acessibilidade e usabilidade.
         </p>
     </div>
-    <a href="../cardSelectpage/index.html">  <button id="btnComeceAgora" onclick="getButton('Cadastro')" >Agora</button></a>
-  
+    <a href="../cardSelectpage/index.html"> <button id="btnComeceAgora"
+            onclick="getButton('Cadastro')">Agora</button></a>
+
     <script src="./js.js"></script>
 </body>
+
 </html>
