--- a/codigo/listar_empresas/Detalhes/index.html
+++ b/codigo/listar_empresas/Detalhes/index.html
@@ -20,42 +20,20 @@
             <img src="../../images/Carinha.png" alt="img" class="userImg">
             <div class="caracteristicas">
                 <div class="caracteristica">
-                    <label id="namelbl">Nome: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
+                    <p>Nome: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="formacaolbl">Formação: </label>
-                    <label for="formacaoValue">xxxxxxxxxx</label>
+                    <p>Formação: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="salariolbl">Pretenção Salárial: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
+                    <p>Pretenção Salárial: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="turnolbl">Turno: </label>
-                    <label for="turnoValue">xxxxxxxxxx</label>
-                </div>
-                <button class="btnDetalhes">Detalhes</button>
-            </div>
-        </div>
-        <div class="item">
-            <img src="../../images/Carinha.png" alt="img" class="userImg">
-            <div class="caracteristicas">
-                <div class="caracteristica">
-                    <label id="namelbl">Nome: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
-                </div>
-                <div class="caracteristica">
-                    <label id="formacaolbl">Formação: </label>
-                    <label for="formacaoValue">xxxxxxxxxx</label>
-                </div>
-                <div class="caracteristica">
-                    <label id="salariolbl">Pretenção Salárial: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
-                </div>
-                <div class="caracteristica">
-                    <label id="turnolbl">Turno: </label>
-                    <label for="turnoValue">xxxxxxxxxx</label>
+                    <p>Turno: </p>
+                    <p></p>
                 </div>
                 <button class="btnDetalhes">Detalhes</button>
             </div>
@@ -64,20 +42,42 @@
             <img src="../../images/Carinha.png" alt="img" class="userImg">
             <div class="caracteristicas">
                 <div class="caracteristica">
-                    <label id="namelbl">Nome: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
+                    <p>Nome: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="formacaolbl">Formação: </label>
-                    <label for="formacaoValue">xxxxxxxxxx</label>
+                    <p>Formação: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="salariolbl">Pretenção Salárial: </label>
-                    <label for="nameValue">xxxxxxxxxx</label>
+                    <p>Pretenção Salárial: </p>
+                    <p></p>
                 </div>
                 <div class="caracteristica">
-                    <label id="turnolbl">Turno: </label>
-                    <label for="turnoValue">xxxxxxxxxx</label>
+                    <p>Turno: </p>
+                    <p></p>
+                </div>
+                <button class="btnDetalhes">Detalhes</button>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../../images/Carinha.png" alt="img" class="userImg">
+            <div class="caracteristicas">
+                <div class="caracteristica">
+                    <p>Nome: </p>
+                    <p></p>
+                </div>
+                <div class="caracteristica">
+                    <p>Formação: </p>
+                    <p ></p>
+                </div>
+                <div class="caracteristica">
+                    <p >Pretenção Salárial: </p>
+                    <p ></p>
+                </div>
+                <div class="caracteristica">
+                    <p>Turno: </p>
+                    <p></p>
                 </div>
                 <button class="btnDetalhes">Detalhes</button>
             </div>
