--- a/codigo/vagas_estagiario/index.html
+++ b/codigo/vagas_estagiario/index.html
@@ -9,14 +9,21 @@
   <meta name="viewport" content="width=device-width">
   <title>Estagiarios</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 
 <body>
   <div class="nav">
     <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+   
   </div>
+
   <div class="vagarecomendada">
+
+
+
     <h2>VAGAS<br>RECOMENDADAS</h2>
   </div>
   <div class="container">
@@ -30,6 +37,8 @@
     <div id="allvagas"></div>
   </div>
 
+  
+    
   <script src="./js.js"></script>
 </body>
 
