--- a/codigo/LoginPage/Empresa/indexEmpresa.html
+++ b/codigo/LoginPage/Empresa/indexEmpresa.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="nav">
-        <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
+        <img src="../../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../../Landingpage/index.html'">
     </div>
     <main>
         <div class="card" id="e">
