--- a/codigo/vagas_estagiario/index.html
+++ b/codigo/vagas_estagiario/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
-<html>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Estagiarios</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
 
 <body>
   <div class="nav">
     <img src="../images/unknown.png" alt="Home" id="imgnav" onclick="location.href='../Landingpage/index.html'">
-   
   </div>
-
-  <div class="vagarecomendada">
-
-
-
-    <h2>VAGAS<br>RECOMENDADAS</h2>
-  </div>
-  <div class="container">
-    <div id="daniel"></div>
-  </div>
-
-  <div class="vagarecomendada">
-    <h1>VAGAS<br>DISPONÍVEIS</h1>
-  </div>
-  <div class="container">
-    <div id="allvagas"></div>
-  </div>
-
-  
-    
+  <div class="body">
+    <div class="titulo">
+      <h1>VAGAS DISPONÍVEIS</h1>
+    </div>
+    <div class="container">
+      <div id="allvagas" class="caixas"></div>
+    </div>
   <script src="./js.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
-
-</html>
 
 </html>
