--- a/codigo/Landingpage/index.html
+++ b/codigo/Landingpage/index.html
@@ -56,7 +56,7 @@
         </p>
     </div>
     <a href="../cardSelectpage/index.html"> <button id="btnComeceAgora"
-            onclick="getButton('Cadastro')">Agora</button></a>
+            onclick="getButton('Cadastro')">Cadastre-se Agora</button></a>
 
     <script src="./js.js"></script>
 </body>
