--- a/codigo/listar_empresas/index.html
+++ b/codigo/listar_empresas/index.html
@@ -30,7 +30,7 @@
 
         </div>
         <form id="novavaga" class="Novavaga">
-
+          <input type="text" name="" id="ipnomeEmpresa" class="txt" placeholder="Nome Empresa">
           <input type="text" name="" id="ipnome" class="txt" placeholder="Nome:">
           <div class="boxCheckbox">
             <h7 class="turno" id="Turno">Turno (pode escolher mais de um):</h7>
