--- a/codigo/listar_empresas/index.html
+++ b/codigo/listar_empresas/index.html
@@ -62,7 +62,7 @@
  
 
   <div class="vagarecomendada">
-    <h1>ESTAGIÁRIOS</h1>
+    <h1>Vagas Criadas</h1>
   </div>
   <div class="container">
     <div id="allvagas"></div>
