--- a/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
+++ b/codigo/Cadastro/C-Empresa/C-EmpresaII/index.html
@@ -30,7 +30,7 @@
 
                 <input type="text" id="email" placeholder="Email">
 
-                <input type="password" id="contact" placeholder="Contato">
+                <input type="text" id="contact" placeholder="Contato">
 
                 <input type="password" id="pass" placeholder="Senha">
 
